src/test/compile-fail/vector-no-ann.rs
fn main() {
    let _foo = ~[]; //~ ERROR unconstrained type
}
